# OCP

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/path_planner/lib/path_planner/: planner
install/path_planner/share/path_planner/: package.sh
log/: latest_build
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/include/: Extra_Del.hpp  oc_planner.hpp  oc_planner_exec.hpp  oc_planner_node.hpp  planner.hpp  rosa_main.hpp  skeleton_decomp.hpp  voxel_mapper.hpp
src/path_planner/src/: main_exec.cpp  oc_planner.cpp  oc_planner_exec.cpp  oc_planner_node.cpp  planner.cpp  rosa_main.cpp  skeleton_decomp.cpp  voxel_mapper.cpp
src/pegaus_px4_ros2/: CMakeLists.txt  package.xml
src/pegaus_px4_ros2/src/: offboard_control.cpp
src/px4_msgs/: CMakeLists.txt
src/px4_pegasus/: CMakeLists.txt
src/px4_pegasus/pegasus_simulation/: pegasus_sim.py
src/px4_pegasus/src/: offboard_control.cpp
src/test/: package.xml
vis_dev_tools/: pcd_vis.py  vector_vis.py
